cabal-version:   3.0
name:            aloussase-com
version:         0.1.0.0

-- synopsis:
-- description:
homepage:        https://github.com/aloussase/aloussase.com
license:         MIT
license-file:    LICENSE
author:          Alexander Goussas
maintainer:      goussasalexander@gmail.com

-- copyright:
category:        Web
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable aloussase-com
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base                   ^>=4.17.2.1
    , blaze-html
    , scotty
    , text
    , wai-extra
    , wai-middleware-static

  hs-source-dirs:   src
  default-language: Haskell2010
